fixed event from not showing on side of calendar

--- a/features/calendar/assets/css/calendar.css
+++ b/features/calendar/assets/css/calendar.css
@@ -3,6 +3,11 @@
     font-size: 16px;
 }
 
+.calendar-view {
+    width : 1100px;
+    
+}
+
 .smallCalendar {
     width: 800px;
     height: 600px;
@@ -17,14 +22,14 @@
 
 .eventLink {
     margin-top: 50px;
-    margin-right: 50px;
+    margin-right: 30px;
 }
 
 #event-div {
     float: right;
     clear: right;
     margin-top: 20px;
-    margin-right: 20px;
+    margin-right: 0px;
     width: 250px;
     background-color: #e3e9ff;
     border-style: solid;
